--- a/index.html
+++ b/index.html
@@ -1,20 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Convention Center</title>
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="styles/bootstrap.min.css">
+    <link rel="stylesheet" href="styles/bootstrap.min.css" />
 
     <!-- Customize CSS -->
-    <link rel="stylesheet" href="styles/style.css">
-</head>
-<body>
-    
-
+    <link rel="stylesheet" href="styles/style.css" />
+  </head>
+  <body>
+    <!-- header start  -->
+    <header>
+      <nav class="navbar navbar-light bg-white">
+        <div class="container">
+          <h2 class="fw-bold"><a class="navbar-brand" href="#">Classic Convention Center</a></h2>
+        </div>
+      </nav>
+    </header>
+    <!-- header end  -->
 
     <script src="js/bootstrap.bundle.min.js"></script>
-</body>
+  </body>
 </html>
