--- a/index.html
+++ b/index.html
@@ -14,13 +14,176 @@
   <body>
     <!-- header start  -->
     <header>
-      <nav class="navbar navbar-light bg-white">
+      <nav class="navbar navbar-light bg-white fixed-top">
         <div class="container">
-          <h2 class="fw-bold"><a class="navbar-brand" href="#">Classic Convention Center</a></h2>
+          <h2 class="fw-bold">
+            <a class="navbar-brand" href="#">Classic Convention Center</a>
+          </h2>
         </div>
       </nav>
+
+      <!-- slider carousel  -->
+      <section class="container-fluid">
+        <div
+          id="carouselExampleCaptions"
+          class="carousel slide"
+          data-bs-ride="carousel"
+        >
+          <!-- slider indicators  -->
+          <div class="carousel-indicators">
+            <button
+              type="button"
+              data-bs-target="#carouselExampleCaptions"
+              data-bs-slide-to="0"
+              class="active"
+              aria-current="true"
+              aria-label="Slide 1"
+            ></button>
+            <button
+              type="button"
+              data-bs-target="#carouselExampleCaptions"
+              data-bs-slide-to="1"
+              aria-label="Slide 2"
+            ></button>
+            <button
+              type="button"
+              data-bs-target="#carouselExampleCaptions"
+              data-bs-slide-to="2"
+              aria-label="Slide 3"
+            ></button>
+          </div>
+
+          <div class="carousel-inner">
+            <!-- slider one  -->
+            <div class="carousel-item active">
+              <img src="images/event-1.jpg" class="d-block w-100" alt="..." />
+              <div class="carousel-caption d-none d-md-block">
+                <h1 class="text-white fw-bold">The perfect venue for your <br> next event</h1>
+                <p class="fw-light"><small>Event management is the application of project management <br> to the creation and development of small or large-scale events</small></p>
+                <a class="btn btn-warning bg-white border-0 text-primary" href="https://web.programming-hero.com" role="button">Order Now</a>
+              </div>
+            </div>
+            <!-- slider two  -->
+            <div class="carousel-item">
+                <img src="images/event-2.jpg" class="d-block w-100" alt="..." />
+                <div class="carousel-caption d-none d-md-block">
+                  <h1 class="text-white fw-bold">The perfect venue for your <br> next event</h1>
+                  <p class="fw-light"><small>Event management is the application of project management <br> to the creation and development of small or large-scale events</small></p>
+                  <a class="btn btn-warning bg-white border-0 text-primary" href="https://web.programming-hero.com" role="button">Order Now</a>
+                </div>
+              </div>
+            <!-- slider three  -->
+            <div class="carousel-item">
+                <img src="images/event-3.jpg" class="d-block w-100" alt="..." />
+                <div class="carousel-caption d-none d-md-block">
+                  <h1 class="text-white fw-bold">The perfect venue for your <br> next event</h1>
+                  <p class="fw-light"><small>Event management is the application of project management <br> to the creation and development of small or large-scale events</small></p>
+                  <a class="btn btn-warning bg-white border-0 text-primary" href="https://web.programming-hero.com" role="button">Order Now</a>
+                </div>
+              </div>
+
+          <!-- slider previous button  -->
+          <button
+            class="carousel-control-prev"
+            type="button"
+            data-bs-target="#carouselExampleCaptions"
+            data-bs-slide="prev"
+          >
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <!-- slider next button  -->
+          <button
+            class="carousel-control-next"
+            type="button"
+            data-bs-target="#carouselExampleCaptions"
+            data-bs-slide="next"
+          >
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
+      </section>
     </header>
     <!-- header end  -->
+
+    <main>
+        <!-- pakages card section  -->
+        <section class="container my-5">
+            <h2 class="fw-bold text-center">Our Pakage</h2>
+
+        </section>
+
+        <!-- FAQ Accordion section -->
+        <section class="container my-5">
+            <h2 class="fw-bold text-center my-5">Frequently Asked Questions</h2>
+
+            <!-- Accordion -->
+            <div class="row">
+                <div class="col-lg-6 d-flex align-items-center">
+                    <div class="accordion" id="accordionExample">
+                        <!-- accordion one  -->
+                       <div class="accordion-item">
+                         <h2 class="accordion-header" id="headingOne">
+                           <button class="accordion-button bg-white text-dark" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                               What’s the difference between event design and event planning? 
+                           </button>
+                         </h2>
+                         <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+                           <div class="accordion-body">
+                               Event design and event planning work hand in hand to deliver a successful event.Events by Knight offer tailor made events. This means we incorporate both event design and event planning to create that perfect event.
+                           </div>
+                         </div>
+                       </div>
+                        <!-- accordion two  -->
+                       <div class="accordion-item">
+                         <h2 class="accordion-header" id="headingTwo">
+                           <button class="accordion-button bg-white text-dark collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                               How early do we need to start planning an event
+                           </button>
+                         </h2>
+                         <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+                           <div class="accordion-body">
+                               Event design and event planning work hand in hand to deliver a successful event.Events by Knight offer tailor made events. This means we incorporate both event design and event planning to create that perfect event.
+                           </div>
+                         </div>
+                       </div>
+                        <!-- accordion three  -->
+                       <div class="accordion-item">
+                         <h2 class="accordion-header" id="headingThree">
+                           <button class="accordion-button bg-white text-dark collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                               What is your refund and cancellation policy?
+                           </button>
+                         </h2>
+                         <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+                           <div class="accordion-body">
+                               Event design and event planning work hand in hand to deliver a successful event.Events by Knight offer tailor made events. This means we incorporate both event design and event planning to create that perfect event.
+                           </div>
+                         </div>
+                       </div>
+                       <!-- accordion four  -->
+                       <div class="accordion-item">
+                           <h2 class="accordion-header" id="heaFour">
+                           <button class="accordion-button bg-white text-dark collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+                               How do you keep budgets on track?
+                           </button>
+                         </h2>
+                         <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour" data-bs-parent="#accordionExample">
+                           <div class="accordion-body">
+                               Event design and event planning work hand in hand to deliver a successful event.Events by Knight offer tailor made events. This means we incorporate both event design and event planning to create that perfect event.
+                           </div>
+                         </div>
+                       </div>
+                     </div>
+                </div>
+                <div class="col-lg-6 d-flex align-items-center">
+                    <img src="images/faq.png" class="rounded float-end" alt="">
+                </div>
+            </div>
+        </section>
+
+        
+    </main>
 
     <script src="js/bootstrap.bundle.min.js"></script>
   </body>
