--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
               <div class="carousel-caption d-none d-md-block">
                 <h1 class="text-white fw-bold">The perfect venue for your <br> next event</h1>
                 <p class="fw-light"><small>Event management is the application of project management <br> to the creation and development of small or large-scale events</small></p>
-                <a class="btn btn-warning bg-white border-0 text-primary" href="https://web.programming-hero.com" role="button">Order Now</a>
+                <a class="btn btn-warning bg-white border-0 text-primary fw-bold" href="https://web.programming-hero.com" role="button">Order Now</a>
               </div>
             </div>
             <!-- slider two  -->
@@ -69,7 +69,7 @@
                 <div class="carousel-caption d-none d-md-block">
                   <h1 class="text-white fw-bold">The perfect venue for your <br> next event</h1>
                   <p class="fw-light"><small>Event management is the application of project management <br> to the creation and development of small or large-scale events</small></p>
-                  <a class="btn btn-warning bg-white border-0 text-primary" href="https://web.programming-hero.com" role="button">Order Now</a>
+                  <a class="btn btn-warning bg-white border-0 text-primary fw-bold" href="https://web.programming-hero.com" role="button">Order Now</a>
                 </div>
               </div>
             <!-- slider three  -->
@@ -78,7 +78,7 @@
                 <div class="carousel-caption d-none d-md-block">
                   <h1 class="text-white fw-bold">The perfect venue for your <br> next event</h1>
                   <p class="fw-light"><small>Event management is the application of project management <br> to the creation and development of small or large-scale events</small></p>
-                  <a class="btn btn-warning bg-white border-0 text-primary" href="https://web.programming-hero.com" role="button">Order Now</a>
+                  <a class="btn btn-warning bg-white border-0 text-primary fw-bold" href="https://web.programming-hero.com" role="button">Order Now</a>
                 </div>
               </div>
 
@@ -176,14 +176,26 @@
                        </div>
                      </div>
                 </div>
-                <div class="col-lg-6 d-flex align-items-center">
-                    <img src="images/faq.png" class="rounded float-end" alt="">
+                <div class="col-lg-6 col-12 d-flex align-items-center">
+                    <img src="images/faq.png" class="rounded w-100 float-end" alt="">
                 </div>
             </div>
         </section>
 
-        
-    </main>
+        <!-- subscribe section  -->
+        <section style="height: 340px;" class="container 12 my-5 p-3 bg-primary text-white
+        d-flex justify-content-center align-items-center rounded-3">
+            <div>
+                <h2>Let's Stay in Touch</h2>
+                <p><small>Get updates on sales, specials and more</small></p>
+                <input type="email" class="form-control" name="" id="" placeholder="Your Email" required />
+                 <br />
+                 <button class="btn btn-warning rounded-3 text-uppercase">
+                  Submit
+                 </button>
+            </div>
+        </section>
+ </main>
 
     <script src="js/bootstrap.bundle.min.js"></script>
   </body>
