footer added.note:I work subscribe and footer together,I fotgot to commit subscribe section, that's why I cut the footer section and commit subscribe section and then I paste again footer section for commit.

--- a/index.html
+++ b/index.html
@@ -197,6 +197,25 @@
         </section>
  </main>
 
+ <!-- footer start  -->
+ <footer class="bg-dark py-3">
+     <section style="height: 280px;" class="container mt-5 text-white">
+         <div class="row">
+             <div class="col-lg-6 d-grid justify-content-start align-items-center">
+                 <p><small> &copy;2025 Bike. All rights reserved. </small></p>
+             </div>
+             <div class="col-lg-6 d-grid justify-content-end align-items-center">
+                 <div class="d-flex flex-column">
+                    <h5 class="mb-3">Get the App</h5>
+                    <a href="https://apps.apple.com/us/app/programming-hero-coding-fun/id1478201849" target="_blank"><img class="bg-dark mb-3 rounded-3" src="images/link-1.png" alt=""></a>
+                    <a href="https://play.google.com/store/apps/details?id=com.learnprogramming.codecamp&hl=en&gl=US" target="_blank"><img class="bg-dark mb-3 rounded-3" src="images/link-2.png" alt=""></a>
+                 </div>
+             </div>
+         </div>
+     </section>
+ </footer>
+ <!-- footer end  -->
+
     <script src="js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
