card area added

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Convention Center</title>
+
+    <!-- font awesome  -->
+    <script src="https://kit.fontawesome.com/e635a0b3d2.js" crossorigin="anonymous"></script>
+
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="styles/bootstrap.min.css" />
 
@@ -111,7 +115,132 @@
         <!-- pakages card section  -->
         <section class="container my-5">
             <h2 class="fw-bold text-center">Our Pakage</h2>
-
+            <div class="row row-cols-1 row-cols-lg-4 g-4">
+                <!-- card one  -->
+                <div class="col">
+                  <div class="card h-100 border-0">
+                    <div class="card-body pb-1">
+                      <h2 class="card-title fw-bold my-3">$300</h2>
+                      <h4 class="card-title fw-bolder">Business fair</h4>
+                      <p class="card-text"><small>For most businesses event 
+                        like book fair, craft fair.</small></p>
+                        <ul class="list-group">
+                            <li class="list-group-item px-0 py-1 border-0">
+                                <i class="fas fa-check-circle me-2"></i><small>limited space access</small>
+                            </li>
+                            <li class="list-group-item px-0 py-1 border-0">
+                                <i class="fas fa-check-circle me-2"></i><small>Secuirty facility</small>
+                            </li>
+                            <li class="list-group-item px-0 py-1 border-0">
+                                <i class="fas fa-check-circle me-2"></i><small>event support</small>
+                            </li>
+                            <li class="list-group-item px-0 py-1 border-0">
+                                <i class="fas fa-check-circle me-2"></i><small>Decoration design</small>
+                            </li>
+                            <li class="list-group-item px-0 py-1 border-0">
+                                <i class="fas fa-check-circle me-2"></i><small>Per day bill</small>
+                            </li>
+                          </ul>
+                    </div>
+                    <div class="card-footer bg-body border-0">
+                        <a href="" class="btn btn-info text-white border-0 w-100 rounded-pill">Choose plan</a>
+                    </div>
+                  </div>
+                </div>
+                <!-- card two  -->
+                <div class="col">
+                  <div class="card h-100 border-0">
+                    <div class="card-body pb-1">
+                      <h2 class="card-title fw-bold my-3">$300</h2>
+                      <h4 class="card-title fw-bolder">Business fair</h4>
+                      <p class="card-text"><small>For most businesses event 
+                        like book fair, craft fair.</small></p>
+                        <ul class="list-group">
+                            <li class="list-group-item px-0 py-1 border-0">
+                                <i class="fas fa-check-circle me-2"></i><small>limited space access</small>
+                            </li>
+                            <li class="list-group-item px-0 py-1 border-0">
+                                <i class="fas fa-check-circle me-2"></i><small>Secuirty facility</small>
+                            </li>
+                            <li class="list-group-item px-0 py-1 border-0">
+                                <i class="fas fa-check-circle me-2"></i><small>event support</small>
+                            </li>
+                            <li class="list-group-item px-0 py-1 border-0">
+                                <i class="fas fa-check-circle me-2"></i><small>Decoration design</small>
+                            </li>
+                            <li class="list-group-item px-0 py-1 border-0">
+                                <i class="fas fa-check-circle me-2"></i><small>Per day bill</small>
+                            </li>
+                          </ul>
+                    </div>
+                    <div class="card-footer bg-body border-0">
+                        <a href="" class="btn btn-info text-white border-0 w-100 rounded-pill">Choose plan</a>
+                    </div>
+                  </div>
+                </div>
+                <!-- card three  -->
+                <div class="col">
+                  <div class="card h-100 border-0">
+                    <div class="card-body pb-1">
+                      <h2 class="card-title fw-bold my-3">$300</h2>
+                      <h4 class="card-title fw-bolder">Business fair</h4>
+                      <p class="card-text"><small>For most businesses event 
+                        like book fair, craft fair.</small></p>
+                        <ul class="list-group">
+                            <li class="list-group-item px-0 py-1 border-0">
+                                <i class="fas fa-check-circle me-2"></i><small>limited space access</small>
+                            </li>
+                            <li class="list-group-item px-0 py-1 border-0">
+                                <i class="fas fa-check-circle me-2"></i><small>Secuirty facility</small>
+                            </li>
+                            <li class="list-group-item px-0 py-1 border-0">
+                                <i class="fas fa-check-circle me-2"></i><small>event support</small>
+                            </li>
+                            <li class="list-group-item px-0 py-1 border-0">
+                                <i class="fas fa-check-circle me-2"></i><small>Decoration design</small>
+                            </li>
+                            <li class="list-group-item px-0 py-1 border-0">
+                                <i class="fas fa-check-circle me-2"></i><small>Per day bill</small>
+                            </li>
+                          </ul>
+                    </div>
+                    <div class="card-footer bg-body border-0">
+                        <a href="" class="btn btn-info text-white border-0 w-100 rounded-pill">Choose plan</a>
+                    </div>
+                  </div>
+                </div>
+                <!-- card four  -->
+                <div class="col">
+                  <div class="card h-100 border-0">
+                    <div class="card-body pb-1">
+                      <h2 class="card-title fw-bold my-3">$300</h2>
+                      <h4 class="card-title fw-bolder">Business fair</h4>
+                      <p class="card-text"><small>For most businesses event 
+                        like book fair, craft fair.</small></p>
+                        <ul class="list-group">
+                            <li class="list-group-item px-0 py-1 border-0">
+                                <i class="fas fa-check-circle me-2"></i><small>limited space access</small>
+                            </li>
+                            <li class="list-group-item px-0 py-1 border-0">
+                                <i class="fas fa-check-circle me-2"></i><small>Secuirty facility</small>
+                            </li>
+                            <li class="list-group-item px-0 py-1 border-0">
+                                <i class="fas fa-check-circle me-2"></i><small>event support</small>
+                            </li>
+                            <li class="list-group-item px-0 py-1 border-0">
+                                <i class="fas fa-check-circle me-2"></i><small>Decoration design</small>
+                            </li>
+                            <li class="list-group-item px-0 py-1 border-0">
+                                <i class="fas fa-check-circle me-2"></i><small>Per day bill</small>
+                            </li>
+                          </ul>
+                    </div>
+                    <div class="card-footer bg-body border-0">
+                        <a href="" class="btn btn-info text-white border-0 w-100 rounded-pill">Choose plan</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
         </section>
 
         <!-- FAQ Accordion section -->
@@ -183,7 +312,7 @@
         </section>
 
         <!-- subscribe section  -->
-        <section style="height: 340px;" class="container 12 my-5 p-3 bg-primary text-white
+        <section style="height: 340px;" class="container 12 my-5 p-3 bg-info text-white
         d-flex justify-content-center align-items-center rounded-3">
             <div>
                 <h2>Let's Stay in Touch</h2>
