color card added

--- a/index.html
+++ b/index.html
@@ -179,32 +179,32 @@
                   </div>
                 </div>
                 <!-- card three  -->
-                <div class="col">
-                  <div class="card h-100 border-0">
+                <div class="col bg-primary rounded-3">
+                  <div class="card text-white bg-primary mb-3 h-100 border-0">
                     <div class="card-body pb-1">
-                      <h2 class="card-title fw-bold my-3">$300</h2>
+                      <h2 class="card-title fw-bold mb-3 mt-1">$300</h2>
                       <h4 class="card-title fw-bolder">Business fair</h4>
                       <p class="card-text"><small>For most businesses event 
                         like book fair, craft fair.</small></p>
-                        <ul class="list-group">
-                            <li class="list-group-item px-0 py-1 border-0">
+                        <ul style="list-style: none;" class="list-group">
+                            <li class="px-0 py-1 border-0">
                                 <i class="fas fa-check-circle me-2"></i><small>limited space access</small>
                             </li>
-                            <li class="list-group-item px-0 py-1 border-0">
+                            <li class="px-0 py-1 border-0">
                                 <i class="fas fa-check-circle me-2"></i><small>Secuirty facility</small>
                             </li>
-                            <li class="list-group-item px-0 py-1 border-0">
+                            <li class="px-0 py-1 border-0">
                                 <i class="fas fa-check-circle me-2"></i><small>event support</small>
                             </li>
-                            <li class="list-group-item px-0 py-1 border-0">
+                            <li class="px-0 py-1 border-0">
                                 <i class="fas fa-check-circle me-2"></i><small>Decoration design</small>
                             </li>
-                            <li class="list-group-item px-0 py-1 border-0">
+                            <li class="px-0 py-1 border-0">
                                 <i class="fas fa-check-circle me-2"></i><small>Per day bill</small>
                             </li>
                           </ul>
                     </div>
-                    <div class="card-footer bg-body border-0">
+                    <div class="card-footer bg-body m-0 p-0 bg-transparent mb-4 border-0">
                         <a href="" class="btn btn-info text-white border-0 w-100 rounded-pill">Choose plan</a>
                     </div>
                   </div>
