card section complete

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
     <main>
         <!-- pakages card section  -->
         <section class="container my-5">
-            <h2 class="fw-bold text-center">Our Pakage</h2>
+            <h2 class="fw-bold text-center mb-5">Our Pakage</h2>
             <div class="row row-cols-1 row-cols-lg-4 g-4">
                 <!-- card one  -->
                 <div class="col">
@@ -179,7 +179,10 @@
                   </div>
                 </div>
                 <!-- card three  -->
-                <div class="col bg-primary rounded-3">
+                <div class="col bg-primary rounded-3 position-relative">
+                    <span style="z-index: 5;" class="position-absolute top-0 end-0 translate-middle badge rounded-pill bg-danger">
+                        Deal
+                      </span>
                   <div class="card text-white bg-primary mb-3 h-100 border-0">
                     <div class="card-body pb-1">
                       <h2 class="card-title fw-bold mb-3 mt-1">$300</h2>
