--- a/index.html
+++ b/index.html
@@ -246,6 +246,16 @@
               </div>
         </section>
 
+        <!-- Toast  -->
+        <div class="toast show align-items-center" role="alert" aria-live="assertive" aria-atomic="true">
+            <div class="d-flex">
+              <div class="toast-body">
+              hey! Don't scroll. Choose a plan.
+             </div>
+              <button type="button" class="btn-close me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"></button>
+            </div>
+          </div>
+
         <!-- FAQ Accordion section -->
         <section class="container my-5">
             <h2 class="fw-bold text-center my-5">Frequently Asked Questions</h2>
