--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header>
       <nav class="navbar navbar-light bg-white fixed-top">
         <div class="container">
-          <h2 class="fw-bold">
+          <h2 style="font-family: 'Poppins', sans-serif;" class="fw-bold">
             <a class="navbar-brand" href="#">Classic Convention Center</a>
           </h2>
         </div>
@@ -121,9 +121,8 @@
                   <div class="card h-100 border-0">
                     <div class="card-body pb-1">
                       <h2 class="card-title fw-bold my-3">$300</h2>
-                      <h4 class="card-title fw-bolder">Business fair</h4>
-                      <p class="card-text"><small>For most businesses event 
-                        like book fair, craft fair.</small></p>
+                      <h4 class="card-title fw-bolder">Event Time</h4>
+                      <p class="card-text"><small>Event management is the application of project management to the creation and development</small></p>
                         <ul class="list-group">
                             <li class="list-group-item px-0 py-1 border-0">
                                 <i class="fas fa-check-circle me-2"></i><small>limited space access</small>
@@ -152,9 +151,8 @@
                   <div class="card h-100 border-0">
                     <div class="card-body pb-1">
                       <h2 class="card-title fw-bold my-3">$300</h2>
-                      <h4 class="card-title fw-bolder">Business fair</h4>
-                      <p class="card-text"><small>For most businesses event 
-                        like book fair, craft fair.</small></p>
+                      <h4 class="card-title fw-bolder">Festival</h4>
+                      <p class="card-text"><small>Event management is the application of project management to the creation and development</small></p>
                         <ul class="list-group">
                             <li class="list-group-item px-0 py-1 border-0">
                                 <i class="fas fa-check-circle me-2"></i><small>limited space access</small>
@@ -179,16 +177,15 @@
                   </div>
                 </div>
                 <!-- card three  -->
-                <div class="col bg-primary rounded-3 position-relative">
+                <div class="col bg-success rounded-3 position-relative">
                     <span style="z-index: 5;" class="position-absolute top-0 end-0 translate-middle badge rounded-pill bg-danger">
-                        Deal
+                        Deal!
                       </span>
-                  <div class="card text-white bg-primary mb-3 h-100 border-0">
+                  <div class="card text-white bg-transparent mb-3 h-100 border-0">
                     <div class="card-body pb-1">
                       <h2 class="card-title fw-bold mb-3 mt-1">$300</h2>
-                      <h4 class="card-title fw-bolder">Business fair</h4>
-                      <p class="card-text"><small>For most businesses event 
-                        like book fair, craft fair.</small></p>
+                      <h4 class="card-title fw-bolder">Special</h4>
+                      <p class="card-text"><small>Event management is the application of project management to the creation and development</small></p>
                         <ul style="list-style: none;" class="list-group">
                             <li class="px-0 py-1 border-0">
                                 <i class="fas fa-check-circle me-2"></i><small>limited space access</small>
@@ -207,8 +204,8 @@
                             </li>
                           </ul>
                     </div>
-                    <div class="card-footer bg-body m-0 p-0 bg-transparent mb-4 border-0">
-                        <a href="" class="btn btn-info text-white border-0 w-100 rounded-pill">Choose plan</a>
+                    <div class="card-footer m-0 p-0 bg-transparent mb-4 border-0">
+                        <a href="" class="btn btn-transparency bg-white text-success fw-bold border-0 w-100 rounded-pill">Choose plan</a>
                     </div>
                   </div>
                 </div>
@@ -217,9 +214,8 @@
                   <div class="card h-100 border-0">
                     <div class="card-body pb-1">
                       <h2 class="card-title fw-bold my-3">$300</h2>
-                      <h4 class="card-title fw-bolder">Business fair</h4>
-                      <p class="card-text"><small>For most businesses event 
-                        like book fair, craft fair.</small></p>
+                      <h4 class="card-title fw-bolder">Current Event</h4>
+                      <p class="card-text"><small>Event management is the application of project management to the creation and development</small></p>
                         <ul class="list-group">
                             <li class="list-group-item px-0 py-1 border-0">
                                 <i class="fas fa-check-circle me-2"></i><small>limited space access</small>
