again revition and some changes

--- a/index.html
+++ b/index.html
@@ -120,24 +120,24 @@
                 <div class="col">
                   <div class="card h-100 border-0">
                     <div class="card-body pb-1">
-                      <h2 class="card-title fw-bold my-3">$300</h2>
-                      <h4 class="card-title fw-bolder">Event Time</h4>
+                      <h2 class="card-title my-3">$300</h2>
+                      <h4 class="card-title">Event Time</h4>
                       <p class="card-text"><small>Event management is the application of project management to the creation and development</small></p>
-                        <ul class="list-group">
-                            <li class="list-group-item px-0 py-1 border-0">
-                                <i class="fas fa-check-circle me-2"></i><small>limited space access</small>
+                        <ul style="list-style: none;" class="list-group">
+                            <li class="px-0 py-1 border-0">
+                                <i class="fas fa-check-circle me-2"></i><small>Tech Support</small>
                             </li>
-                            <li class="list-group-item px-0 py-1 border-0">
-                                <i class="fas fa-check-circle me-2"></i><small>Secuirty facility</small>
+                            <li class="px-0 py-1 border-0">
+                                <i class="fas fa-check-circle me-2"></i><small>Advanced Option</small>
                             </li>
-                            <li class="list-group-item px-0 py-1 border-0">
-                                <i class="fas fa-check-circle me-2"></i><small>event support</small>
+                            <li class="px-0 py-1 border-0">
+                                <i class="fas fa-check-circle me-2"></i><small>Natural Beauty</small>
                             </li>
-                            <li class="list-group-item px-0 py-1 border-0">
-                                <i class="fas fa-check-circle me-2"></i><small>Decoration design</small>
+                            <li class="px-0 py-1 border-0">
+                                <i class="fas fa-check-circle me-2"></i><small>Best Timing</small>
                             </li>
-                            <li class="list-group-item px-0 py-1 border-0">
-                                <i class="fas fa-check-circle me-2"></i><small>Per day bill</small>
+                            <li class="px-0 py-1 border-0">
+                                <i class="fas fa-check-circle me-2"></i><small>24/7 Supports</small>
                             </li>
                           </ul>
                     </div>
@@ -150,24 +150,24 @@
                 <div class="col">
                   <div class="card h-100 border-0">
                     <div class="card-body pb-1">
-                      <h2 class="card-title fw-bold my-3">$300</h2>
-                      <h4 class="card-title fw-bolder">Festival</h4>
+                      <h2 class="card-title my-3">$300</h2>
+                      <h4 class="card-title">Festival</h4>
                       <p class="card-text"><small>Event management is the application of project management to the creation and development</small></p>
-                        <ul class="list-group">
-                            <li class="list-group-item px-0 py-1 border-0">
-                                <i class="fas fa-check-circle me-2"></i><small>limited space access</small>
+                        <ul style="list-style: none;" class="list-group">
+                            <li class="px-0 py-1 border-0">
+                                <i class="fas fa-check-circle me-2"></i><small>Tech Support</small>
                             </li>
-                            <li class="list-group-item px-0 py-1 border-0">
-                                <i class="fas fa-check-circle me-2"></i><small>Secuirty facility</small>
+                            <li class="px-0 py-1 border-0">
+                                <i class="fas fa-check-circle me-2"></i><small>Advanced Option</small>
                             </li>
-                            <li class="list-group-item px-0 py-1 border-0">
-                                <i class="fas fa-check-circle me-2"></i><small>event support</small>
+                            <li class="px-0 py-1 border-0">
+                                <i class="fas fa-check-circle me-2"></i><small>Natural Beauty</small>
                             </li>
-                            <li class="list-group-item px-0 py-1 border-0">
-                                <i class="fas fa-check-circle me-2"></i><small>Decoration design</small>
+                            <li class="px-0 py-1 border-0">
+                                <i class="fas fa-check-circle me-2"></i><small>Best Timing</small>
                             </li>
-                            <li class="list-group-item px-0 py-1 border-0">
-                                <i class="fas fa-check-circle me-2"></i><small>Per day bill</small>
+                            <li class="px-0 py-1 border-0">
+                                <i class="fas fa-check-circle me-2"></i><small>24/7 Supports</small>
                             </li>
                           </ul>
                     </div>
@@ -183,24 +183,24 @@
                       </span>
                   <div class="card text-white bg-transparent mb-3 h-100 border-0">
                     <div class="card-body pb-1">
-                      <h2 class="card-title fw-bold mb-3 mt-1">$300</h2>
-                      <h4 class="card-title fw-bolder">Special</h4>
+                      <h2 class="card-title mb-3 mt-1">$300</h2>
+                      <h4 class="card-title">Special Offer</h4>
                       <p class="card-text"><small>Event management is the application of project management to the creation and development</small></p>
                         <ul style="list-style: none;" class="list-group">
                             <li class="px-0 py-1 border-0">
-                                <i class="fas fa-check-circle me-2"></i><small>limited space access</small>
+                                <i class="fas fa-check-circle me-2"></i><small>Tech Support</small>
                             </li>
                             <li class="px-0 py-1 border-0">
-                                <i class="fas fa-check-circle me-2"></i><small>Secuirty facility</small>
+                                <i class="fas fa-check-circle me-2"></i><small>Advanced Option</small>
                             </li>
                             <li class="px-0 py-1 border-0">
-                                <i class="fas fa-check-circle me-2"></i><small>event support</small>
+                                <i class="fas fa-check-circle me-2"></i><small>Natural Beauty</small>
                             </li>
                             <li class="px-0 py-1 border-0">
-                                <i class="fas fa-check-circle me-2"></i><small>Decoration design</small>
+                                <i class="fas fa-check-circle me-2"></i><small>Best Timing</small>
                             </li>
                             <li class="px-0 py-1 border-0">
-                                <i class="fas fa-check-circle me-2"></i><small>Per day bill</small>
+                                <i class="fas fa-check-circle me-2"></i><small>24/7 Supports</small>
                             </li>
                           </ul>
                     </div>
@@ -213,24 +213,24 @@
                 <div class="col">
                   <div class="card h-100 border-0">
                     <div class="card-body pb-1">
-                      <h2 class="card-title fw-bold my-3">$300</h2>
-                      <h4 class="card-title fw-bolder">Current Event</h4>
+                      <h2 class="card-title my-3">$300</h2>
+                      <h4 class="card-title">Current Event</h4>
                       <p class="card-text"><small>Event management is the application of project management to the creation and development</small></p>
-                        <ul class="list-group">
-                            <li class="list-group-item px-0 py-1 border-0">
-                                <i class="fas fa-check-circle me-2"></i><small>limited space access</small>
+                        <ul style="list-style: none;" class="list-group">
+                            <li class="px-0 py-1 border-0">
+                                <i class="fas fa-check-circle me-2"></i><small>Tech Support</small>
                             </li>
-                            <li class="list-group-item px-0 py-1 border-0">
-                                <i class="fas fa-check-circle me-2"></i><small>Secuirty facility</small>
+                            <li class="px-0 py-1 border-0">
+                                <i class="fas fa-check-circle me-2"></i><small>Advanced Option</small>
                             </li>
-                            <li class="list-group-item px-0 py-1 border-0">
-                                <i class="fas fa-check-circle me-2"></i><small>event support</small>
+                            <li class="px-0 py-1 border-0">
+                                <i class="fas fa-check-circle me-2"></i><small>Natural Beauty</small>
                             </li>
-                            <li class="list-group-item px-0 py-1 border-0">
-                                <i class="fas fa-check-circle me-2"></i><small>Decoration design</small>
+                            <li class="px-0 py-1 border-0">
+                                <i class="fas fa-check-circle me-2"></i><small>Best Timing</small>
                             </li>
-                            <li class="list-group-item px-0 py-1 border-0">
-                                <i class="fas fa-check-circle me-2"></i><small>Per day bill</small>
+                            <li class="px-0 py-1 border-0">
+                                <i class="fas fa-check-circle me-2"></i><small>24/7 Supports</small>
                             </li>
                           </ul>
                     </div>
@@ -254,7 +254,7 @@
 
         <!-- FAQ Accordion section -->
         <section class="container my-5">
-            <h2 class="fw-bold text-center my-5">Frequently Asked Questions</h2>
+            <h2 class="text-center my-5">Frequently Asked Questions</h2>
 
             <!-- Accordion -->
             <div class="row">
